--- a/package.json
+++ b/package.json
@@ -5,16 +5,25 @@
   "scripts": {
     "prestart": "babel-node buildScripts/startMessage.js",
     "start": "npm-run-all --parallel open:src lint:watch test:watch",
-    "open:src":"babel-node buildScripts/srcServer.js",
+    "open:src": "babel-node buildScripts/srcServer.js",
     "share": "lt --port 3000",
     "lint": "esw webpack.config.* src buildScripts --color",
-    "lint:watch":"npm run lint -- --watch ",
+    "lint:watch": "npm run lint -- --watch ",
     "test": "mocha --reporter progress buildScripts/testSetup.js \"src/**/*.test.js\"",
-    "test:watch":"npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "generate-mock-data": "babel-node buildScripts/generateMockData",
+    "prestart-mockapi": "npm run generate-mock-data",
+    "start-mockapi": "json-server --watch src/api/db.json --port 3001",
+    "clean-dist": "rimraf ./dist && mkdir dist",
+    "prebuild": "npm-run-all clean-dist test lint",
+    "build":"babel-node buildScripts/build.js",
+    "postbuild":"babel-node buildScripts/distServer.js "
   },
   "author": "Zahid Hussain",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "whatwg-fetch": "^3.0.0"
+  },
   "devDependencies": {
     "babel-cli": "6.16.0",
     "babel-core": "6.17.0",
